# models/Category.go
@@ -1,1 +1,6 @@
 package models
+
+type Category struct {
+	ID   uint   `json:"id" gorm:"primaryKey"`
+	Name string `json:"name" binding:"required"`
+}
